@startuml
'https://plantuml.com/sequence-diagram

class Biblioteca{
Libros
Usuarios
}

class Usuario{
Rut
Nombre
Apellido
Contraseña
Libros en prestamo
}

class Libro{
ISBN
Título
Autor
Categoría
Numero de copias
}

Usuario "1..*"---> "1"Biblioteca: solicita
Usuario "1..*"---> "1..*"Libro: obtiene
Biblioteca"1" ---> "1..*"Libro: poese
@enduml